Comments added, some small changes

--- a/app/config/config.neon.example
+++ b/app/config/config.neon.example
@@ -36,6 +36,7 @@ common:
 		foods_model: \FoodsModule\FoodsModel
 		tags_model: \FoodsModule\TagsModel
 		foods_pictures_model: \FoodsModule\FoodsPicturesModel
+		mailer_model: \MailModule\MailerModel
 
 	factories:
 
