--- a/app/config/config.neon.example
+++ b/app/config/config.neon.example
@@ -42,6 +42,7 @@ common:
 		tags_model: \FoodsModule\TagsModel
 		foods_pictures_model: \FoodsModule\FoodsPicturesModel
 		mailer_model: \MailModule\MailerModel
+		translator: \Translator
 
 	factories:
 
